--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,16 +12,23 @@
   "dependencies": {
     "@babel/eslint-parser": "^7.28.0",
     "@react-native/new-app-screen": "0.80.1",
+    "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.10.0",
+    "formik": "^2.4.6",
     "react": "19.1.0",
     "react-native": "0.80.1",
     "react-native-gesture-handler": "^2.27.1",
+    "react-native-image-picker": "^8.2.1",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
