--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@babel/eslint-parser": "^7.28.0",
     "@expo-google-fonts/rampart-one": "^0.4.0",
     "@expo-google-fonts/roboto-mono": "^0.4.0",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-native/new-app-screen": "0.80.1",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
