--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@babel/eslint-parser": "^7.28.0",
     "@expo-google-fonts/rampart-one": "^0.4.0",
     "@expo-google-fonts/roboto-mono": "^0.4.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-picker/picker": "^2.11.1",
     "@react-native/new-app-screen": "0.80.1",
     "@react-navigation/bottom-tabs": "^7.4.2",
@@ -32,6 +33,7 @@
     "react-native-localize": "^3.5.1",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "^3.18.0",
+    "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
     "react-native-vector-icons": "^10.2.0",
