--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,48 +13,41 @@
     "@babel/eslint-parser": "^7.28.0",
     "@expo-google-fonts/rampart-one": "^0.4.0",
     "@expo-google-fonts/roboto-mono": "^0.4.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-native/new-app-screen": "0.80.1",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "@reduxjs/toolkit": "^2.8.2",
-<<<<<<< HEAD:package.json
-=======
-
->>>>>>> 4a3a4fb (Update package.json):frontend/package.json
+    "axios": "^1.11.0",
     "expo-app-loading": "^1.0.3",
     "expo-font": "^13.3.2",
     "expo-localization": "^16.1.6",
     "expo-modules-core": "^2.5.0",
     "expo-splash-screen": "^0.30.10",
+    "formik": "^2.4.6",
     "i18n-js": "^4.5.1",
     "react": "19.1.0",
     "react-native": "0.80.1",
     "react-native-gesture-handler": "^2.27.2",
-<<<<<<< HEAD:package.json
-=======
-
->>>>>>> 4a3a4fb (Update package.json):frontend/package.json
     "react-native-image-picker": "^8.2.1",
     "react-native-localize": "^3.5.1",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "^3.18.0",
+    "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
-<<<<<<< HEAD:package.json
-=======
-    "react-native-tab-view": "^4.1.2",
-
->>>>>>> 4a3a4fb (Update package.json):frontend/package.json
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "19.0.0",
+    "@react-native-community/cli": "^19.0.0",
     "@react-native-community/cli-platform-android": "19.0.0",
     "@react-native-community/cli-platform-ios": "19.0.0",
     "@react-native/babel-preset": "0.80.1",
