--- a/frontend/android/app/src/main/AndroidManifest.xml
+++ b/frontend/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    
 
     <application
       android:name=".MainApplication"
@@ -10,6 +11,10 @@
       android:allowBackup="false"
       android:theme="@style/AppTheme"
       android:supportsRtl="true">
+      <meta-data
+  android:name="com.google.android.geo.API_KEY"
+  android:value="AIzaSyCEcwxMIkPKG2RoZ8Qa1LKAkB0BHnKU6go"/>
+
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
