--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,9 @@
     "i18n-js": "^4.5.1",
     "react": "19.1.0",
     "react-native": "0.80.1",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.27.2",
+    "react-native-get-location": "^5.0.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-localize": "^3.5.1",
     "react-native-maps": "^1.24.13",
