--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-picker/picker": "^2.11.1",
     "@react-native/new-app-screen": "0.80.1",
-    "@react-navigation/bottom-tabs": "^7.4.4",
+    "@react-navigation/bottom-tabs": "^7.4.5",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "@reduxjs/toolkit": "^2.8.2",
@@ -31,6 +31,7 @@
     "react": "19.1.0",
     "react-native": "0.80.1",
     "react-native-config": "^1.5.5",
+    "react-native-date-picker": "^5.0.13",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.27.2",
     "react-native-get-location": "^5.0.0",
