--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "i18n-js": "^4.5.1",
     "react": "19.1.0",
     "react-native": "0.80.1",
+    "react-native-config": "^1.5.5",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.27.2",
     "react-native-get-location": "^5.0.0",
@@ -41,12 +42,8 @@
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
-<<<<<<< Updated upstream
-    "react-native-vector-icons": "^10.2.0",
-=======
     "react-native-tab-view": "^4.1.2",
     "react-native-vector-icons": "^10.3.0",
->>>>>>> Stashed changes
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
