--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react": "19.1.0",
     "react-native": "0.80.1",
     "react-native-config": "^1.5.5",
+    "react-native-date-picker": "^5.0.13",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.27.2",
     "react-native-get-location": "^5.0.0",
