adding email route and testing make as action taking on a static email,also addinh a delete x button on the top right of each report card

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,5 @@ JWT_SECRET=ziaraSercret
 CLOUDINARY_API_KEY=711228867542311
 CLOUDINARY_SECRET_KEY=3SyeJnTxxcestF-GpfDjk5g6eZo
 CLOUDINARY_NAME=duvaij387
+GMAIL_USER=ramatobbo5@gmail.com
+GMAIL_PASS=fbwvleckvxjvicjx
