--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
     "react-native-tab-view": "^4.1.2",
+    "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.3.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
