--- a/backend/.env
+++ b/backend/.env
@@ -3,9 +3,11 @@ JWT_SECRET=ziaraSercret
 CLOUDINARY_API_KEY=711228867542311
 CLOUDINARY_SECRET_KEY=3SyeJnTxxcestF-GpfDjk5g6eZo
 CLOUDINARY_NAME=duvaij387
-EMAIL_USER=ramatobbo5@gmail.com
-EMAIL_PASS=fbwvleckvxjvicjx
-GMAIL_USER=ramatobbo5@gmail.com
-GMAIL_PASS=fbwvleckvxjvicjx
+# EMAIL_USER=ramatobbo5@gmail.com
+# EMAIL_PASS=fbwvleckvxjvicjx
+# GMAIL_USER=ramatobbo5@gmail.com
+# GMAIL_PASS=fbwvleckvxjvicjx
+EMAIL_USER=ziaralebanon@gmail.com
+EMAIL_PASS=mlrhswofnjzsydqn
 
 EMAIL_VALIDATION_API_KEY=55c135dab822470796a4ffcc7b422970
