--- a/backend/.env
+++ b/backend/.env
@@ -11,3 +11,4 @@ EMAIL_USER=ziaralebanon@gmail.com
 EMAIL_PASS=mlrhswofnjzsydqn
 
 EMAIL_VALIDATION_API_KEY=55c135dab822470796a4ffcc7b422970
+API_KEY_GOOGLE_PLACES=AIzaSyCEcwxMIkPKG2RoZ8Qa1LKAkB0BHnKU6go
