--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.11.0",
     "formik": "^2.4.6",
+    "i18next": "^25.3.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.6.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.1",
     "react-scripts": "^5.0.1",
