--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react-native": "0.80.1",
     "react-native-config": "^1.5.5",
     "react-native-date-picker": "^5.0.13",
+    "react-native-dotenv": "^3.4.11",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-get-location": "^5.0.0",
