--- a/backend/.env
+++ b/backend/.env
@@ -3,6 +3,7 @@ JWT_SECRET=ziaraSercret
 CLOUDINARY_API_KEY=711228867542311
 CLOUDINARY_SECRET_KEY=3SyeJnTxxcestF-GpfDjk5g6eZo
 CLOUDINARY_NAME=duvaij387
+PORT=5000
 # EMAIL_USER=ramatobbo5@gmail.com
 # EMAIL_PASS=fbwvleckvxjvicjx
 # GMAIL_USER=ramatobbo5@gmail.com
